# ktr

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: bundle.yaml  ci.yaml
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: book_toggle.rs  main.rs
kindle_clippings/: Cargo.toml
kindle_clippings/src/: lib.rs  model.rs  output.rs
kindle_clippings/src/templates/: default.md
src/: lib.rs  main.rs  model.rs  output.rs
src/templates/: default.md
