[package]
name = "ktr"
description = "Converts Kindle highlights to a reference format for use in a Zettelkasten"
keywords = ["kindle", "highlights", "zettelkasten"]
version = "0.1.0"
edition = "2021"
authors = ["Ben Burbage"]
publish = false

[dependencies]
kindle_clippings = { path = "../kindle_clippings"}
clap = { version = "4.5.20", features = ["derive"] }
