[package]
name = "kindle_clippings"
description = "Converts Kindle highlights to a reference format for use in a Zettelkasten"
keywords = ["kindle", "highlights", "zettelkasten"]
version = "0.1.0"
edition = "2021"
authors = ["Ben Burbage"]
publish = false

[dependencies]
regex = "1.11.0"
tera = { version = "1.20.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
